--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
     "express": "^4.17.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "mocha": "^9.1.1",
     "mongoose": "^6.0.5",
     "multer": "^1.4.3",
     "multer-gridfs-storage": "^5.0.1",
     "validator": "^13.6.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "chai": "^4.3.4",
+    "chai-http": "^4.3.0",
+    "nodemon": "^2.0.12",
+    "supertest": "^6.1.6"
   }
 }
